2017-07-24  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/model/options.cpp:
	- オプション文字列の誤りを修正

2017-06-24  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/debug_message_window.cpp:
	* src/qt4/debug_message_window.h:
	- 訓練データの保存場所，ファイル名を変更
	- 関数を整理

2017-06-17  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/debug_message_window.cpp:
	* src/qt4/debug_message_window.h:
	- プレイヤのデバッグログからLogger::TRAININGの行を抜き出して保存す
	る機能を追加．PassRequestMoveを想定

2017-06-03  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/Makefile.am:
	* src/qt4/evaluation_window.h:
	* src/qt4/field_canvas.cpp:
	* src/qt4/field_canvas.h:
	* src/qt4/main_window.cpp:
	* src/qt4/main_window.h:
	- EvaluationWindowをコンパイル対象から削除．

	* src/qt4/Makefile.am:
	* src/qt4/debug_message_window.cpp:
	* src/qt4/debug_message_window.h:
	- EvaluatorControlPanelの使用を停止．コンパイル対象からも削除．

	* src/qt4/debug_message_window.cpp:
	* src/qt4/debug_message_window.h:
	- PassRequestMove訓練のためのボタンとslot関数を追加．slot内の処理
	は未実装

	* src/model/csv_logger.cpp:
	* src/model/csv_logger.h:
	- 汎用のCSVファイル記録用クラスを追加．将来的にライブラリへ移動す
	る可能性あり．

2017-04-14  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* m4/qt.m4
	- Ubuntu16.04でのQt検出部にスペースを挿入

2016-06-13  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* Makefile.am:
	* configure.ac:
	- 存在しないファイルをターゲットから削除
	- 暫定バージョン番号として日付を設定

2016-03-12  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/debug_painter.cpp:
	- 三角形描画のバグを修正

2015-12-02  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/action_sequence_selector.cpp:
	- 試験的にランク学習用の評価値と特徴量を端末へ出力する機能を追加

2015-07-20  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/action_sequence_selector.h:
	- 評価値を編集したアイテムのみの表示と切り替えるボタンを追加

2015-07-19  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/action_sequence_selector.cpp:
	- 編集済みランクデータの自動保存機能を停止

2015-07-14  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/model/action_sequence_description.h: