@@ -1,3 +1,9 @@
+2018-04-14  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* src/model/options.h:
+	* src/qt4/main_window.cpp:
+	- ウインドウの位置とサイズを記憶するように変更
+
 2017-07-24  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* src/model/options.cpp:
